examples/test/testpolicy16875.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16875
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key12: value48
      key13: value7
      key41: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value4
          key7: value26
          key11: value33
      podSelector:
        matchLabels:
          key48: value31
          key27: value22
